--- a/적용코드.html
+++ b/적용코드.html
@@ -6,5 +6,8 @@
   font-style: normal;
 }
 </style>
-<script type='text/javascript' src="https://explainpark101.github.io/hyangTGD/js/discordEmoji.js"></script>
+<script type='text/javscript' src="https://explainpark101.github.io/hyangTGD/js/discordEmoji.js">
+    console.log("test");
+</script>
+
 <style type='text/css'>
